fix: spacing

--- a/js/apps/system/_admin/aardvark/APP/frontend/scss/_queryView.scss
+++ b/js/apps/system/_admin/aardvark/APP/frontend/scss/_queryView.scss
@@ -567,6 +567,7 @@ input[type="checkbox"] {
 
 #sortOptionsDropdown {
   padding: 0;
+  top: 6px;
 }
 
 #sortOptionsDropdownInner {
